_archive/content-services/3.4/concepts/rm-audit-intro.md
---
author: [Alfresco Documentation, Alfresco Documentation, Alfresco Documentation]
source: 
audience: 
category: User Help
option: Records Management
---

# Records Management Auditing

The function of the Records Management system is to manage and control electronic and physical records according to legislative and regulatory requirements, and it must be capable of demonstrating this compliance.

The Audit tool displays the auditing information collected from the system to show whether business rules are being followed and ensure that unauthorized activity can be identified and traced. The Audit tool is especially important for systems that deal with classified information.

The Audit tool maintains a complete trace of all the actions on every record and it cannot be altered. The information that is captured and stored includes:

-   any action on any record, any aggregate, or the File Plan
-   user undertaking the action
-   date and time of the action

The Audit tool displays by default when you access the Management Console.

-   **[Accessing the audit tool](../tasks/rm-audit-access.md)**  
The audit tool displays by default when you access the Management Console.
-   **[Starting and stopping the audit log](../tasks/rm-audit-startstop.md)**  

-   **[Specifying the user](../tasks/rm-audit-user.md)**  

-   **[Filing the audit log as a record](../tasks/rm-audit-filerecord.md)**  

-   **[Exporting the audit log](../tasks/rm-audit-export.md)**  
Export allows you to archive the audit log periodically and enables, for example, external auditors to examine or analyze system activity. When you export the audit log, this does not affect the audit log in the system.
-   **[Auditing actions](../concepts/rm-audit-actions.md)**  
The type of action that is recorded in the audit log includes the following:

**Parent topic:**[Administering Records Management](../concepts/rm-admin-intro.md)

