_archive/content-services/4.0/concepts/rm-audit-intro.md
---
author: [Alfresco Documentation, Alfresco Documentation]
source: 
audience: 
category: User Help
option: Records Management
---

# Records Management Auditing

The function of the Records Management system is to manage and control electronic and physical records according to legislative and regulatory requirements, and it must be capable of demonstrating this compliance.

The Audit tool displays the auditing information collected from the system to show whether business rules are being followed and ensure that unauthorized activity can be identified and traced. The Audit tool is especially important for systems that deal with classified information.

The Audit tool maintains a complete trace of all the actions on every record and it cannot be altered. The information that is captured and stored includes:

-   any action on any record, any container, or the File Plan
-   user undertaking the action
-   date and time of the action

The Audit tool displays by default when you access the Management Console.

-   **[Accessing the Audit tool](../tasks/rm-audit-access.md)**  
The Audit tool displays by default when you open the Management Console.
-   **[Starting and stopping the audit log](../tasks/rm-audit-startstop.md)**  

-   **[Filtering the log entries](../tasks/rm-audit-user.md)**  
By default, the Audit page displays the last 20 entries in the log. You can filter by date and user to see a specific set of entries.
-   **[Filing the audit log as a record](../tasks/rm-audit-filerecord.md)**  

-   **[Exporting the audit log](../tasks/rm-audit-export.md)**  
Export allows you to archive the audit log periodically and enables, for example, external auditors to examine or analyze system activity. When you export the audit log, this does not affect the audit log in the system. The audit log is exported as an HTML file.
-   **[Viewing the full log](../tasks/rm-audit-viewlog.md)**  
You can view the full contents of the log file in a separate window. From there you can save an HTML version of the report on your computer or in the Records Management File Plan.
-   **[Clearing the audit log](../tasks/rm-audit-clear.md)**  
Clearing the audit log deletes all captured actions.
-   **[Auditing actions](../concepts/rm-audit-actions.md)**  
The type of action that is recorded in the audit log includes the following:

**Parent topic:**[Administering Records Management](../concepts/rm-admin-intro.md)

